--- a/_quarto.yml
+++ b/_quarto.yml
@@ -50,7 +50,7 @@ website:
     center: |
     
     right: |
-      <span class="faux-block">This page is built with ❤️ and Quarto, with theme from marvinschmitt</span>
+      <span class="faux-block">This page is built with ❤️ and <a href="https://quarto.org/">Quarto</a>, with theme from <a href="https://www.marvinschmitt.com/blog/website-tutorial-quarto/">marvinschmitt </a> </span>
 
 project:
   type: website
