--- a/_quarto.yml
+++ b/_quarto.yml
@@ -18,13 +18,13 @@ website:
       - text: "Projects"
         href: projects/index.qmd
       - text: "Publications"
-        href: publications/index.qmd
+        href: pubs/index.qmd
       - text: "CV"
         href: cv/index.qmd
       - text: "News"
         href: cv/index.qmd
       - text: "Contact me"
-        href: cv/index.qmd
+        href: contact/index.qmd
     
     # your social media handles
     right:
